# padocca

./: .gitignore  Dockerfile  INSTALL.md  LICENSE  Makefile  README.md  README_v2.md  ROADMAP.md  STATUS.md  config.template.yaml  configure.sh  install.sh  padocca.sh  requirements.txt
config/: proxies.txt
core-rust/: Cargo.toml
core-rust/src/: discovery.rs  main.rs
core-rust/src/crypto/: mod.rs
core-rust/src/evasion/: mod.rs
core-rust/src/exploit/: mod.rs
core-rust/src/network/: mod.rs
core-rust/src/scanner/: mod.rs
docs/: API.md  FEATURES.md
exploit_framework/: Cargo.toml
exploit_framework/src/: bypass.rs  fuzzer.rs  main.rs  mod.rs  payload_encoder.rs  rop_chain.rs  shellcode_gen.rs  zero_day.rs
interface-python/: padocca.py  requirements.txt
lib/: logger.sh  progress.sh
padocca/: __init__.py  cli.py
padocca/modules/: __init__.py  ssl_analyzer.py
pipelines/: pentest-infra.yaml  pentest-web.yaml  stealth-web-pentest-old.yaml  stealth-web-pentest.yaml
scripts/: clean-build.sh  update-dependencies.sh
templates/engine/: template_engine.go
templates/sqli/: sqli-error-based.yaml
templates/xss/: xss-reflected.yaml
tools-go/: go.mod
tools-go/cmd/bruteforce/: main.go
tools-go/cmd/crawler/: main.go
tools-go/cmd/dirfuzz/: main.go
tools-go/cmd/dnsenum/: main.go
tools-go/cmd/emailsec/: main.go
tools-go/cmd/pipeline/: main.go
tools-go/cmd/proxychain/: main.go
tools-go/cmd/subdiscovery/: main.go
tools-go/cmd/techfinger/: main.go
tools-go/cmd/wayback/: main.go
tools-go/pkg/cache/: cache.go
tools-go/pkg/config/: config.go
(+5 files in other folders)
